Fix missing values class Set overflow to hidden

--- a/src/scss/_onco_print.scss
+++ b/src/scss/_onco_print.scss
@@ -17,7 +17,7 @@ $oncoprint_cnv_normal: '0';
 $oncoprint_cnv_normal_color: #dcdcdc;
 $oncoprint_cnv_normal_border: transparent;
 
-$oncoprint_cnv_unknown: 'null';
+$oncoprint_cnv_unknown: 'NaN';
 $oncoprint_cnv_unknown_color: #FCFCFC;
 $oncoprint_cnv_unknown_border: #dcdcdc;
 
@@ -27,7 +27,7 @@ $oncoprint_mut_mutated_border: transparent;
 $oncoprint_mut_not_mutated: 'false';
 $oncoprint_mut_not_mutated_color: #aaa;
 $oncoprint_mut_not_mutated_border: transparent;
-$oncoprint_mut_unknown: 'null';
+$oncoprint_mut_unknown: 'NaN';
 $oncoprint_mut_unknown_color: transparent;
 $oncoprint_mut_unknown_border: #999;
 
@@ -95,7 +95,7 @@ div.parameters .oncoPrintScale {
 .oncoPrint {
   display: flex;
   flex-direction: column;
-
+  overflow-x: hidden;
   .legend {
     border-top: 1px solid $core_border;
     width: 100%;
